fixed spacing on comments and add-comments titles

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -550,11 +550,12 @@ textarea{
     margin-top: 2em;
     padding: 0;
     font-size: 1.5em;
+    margin-bottom: 0.2em;
 }
 
 #addcomments_h1{
     margin-bottom: .2em;
-    margin-top: 1em;
+    margin-top: 0.3em;
     font-size: 1.5em;
 }
 
